RESOLVED FIXED201176
REGRESSION(r243434): Wrong URL passed to WebKitWebView::load-failed when cancelling previous load
https://bugs.webkit.org/show_bug.cgi?id=201176
Summary REGRESSION(r243434): Wrong URL passed to WebKitWebView::load-failed when canc...
Carlos Garcia Campos
Reported 2019-08-27 01:33:59 PDT
We are using the current active URL, that could be the new ones requested instead of the one that we are cancelling in case of API requests.
Attachments
Patch (1.67 KB, patch)
2019-08-27 01:35 PDT, Carlos Garcia Campos
zan: review+
Carlos Garcia Campos
Comment 1 2019-08-27 01:35:41 PDT
Carlos Garcia Campos
Comment 2 2019-08-28 03:21:18 PDT
Adrian Perez
Comment 3 2019-09-03 03:26:53 PDT
*** Bug 200341 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.