REGRESSION(r243434): Wrong URL passed to WebKitWebView::load-failed when cancelling previous load https://bugs.webkit.org/show_bug.cgi?id=201176

Reviewed by Žan Doberšek.

Use the current provisional/committed url when faking an error event, instead of the current active URI that can
be the pending api request of a new load.

* UIProcess/API/glib/WebKitWebView.cpp:
(webkitWebViewWillStartLoad):

Canonical link: https://commits.webkit.org/214898@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249193 268f45cc-cd09-0410-ab3c-d52691b4dbfc